# serene-aida-dashboard

./: .gitignore  DEPLOYMENT.md  LICENSE  README.md  __init__.py  aida.py  api_config.ini  dashboard.py  data_loader.py  examples.ipynb  igrf.py  logger.py  pyproject.toml  requirements.txt  warnings.py
.streamlit/: secrets.toml.example
aida/: __init__.py  api.py  exceptions.py  iri.py  modip.py  ne.py  parameter.py  time.py
aida/data/: IGRF14.shc  data_hires.h5
aida_dashboard/: comparison.py  ionex.py
tests/: test_api.py  test_dashboard_config.py  test_dashboard_helpers.py  test_model.py  test_modip.py  test_parameter.py
tests/data/: output_1_221201_053500.h5  output_2_221201_053500.h5  output_3_231201_042500.h5
